Fixes bug where lengthy table content was cut off. Removes row height and refactors styles to adapt to content height. Also shortens VIN numbers in table cells to fit better. Refs #853, #852.

--- a/app/styles/pages/_schPayments.scss
+++ b/app/styles/pages/_schPayments.scss
@@ -1,11 +1,5 @@
 // Scheduled Payments
 
-.schPayments-list {
-  .main-info {
-    height: 85px;
-  }
-}
-
 .sch-label {
   @extend %heavy;
 }
@@ -18,7 +12,7 @@
 }
 
 .cell {
-  &.sch-more { min-width: 4%; }
+  &.sch-more { width: 4%; }
   &.sch-schDate { width: 18%; }
   &.sch-desc { width: 34%; }
   &.sch-status { width: 20%; }
